[project]
name = "mamba-road-scene-segmentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "captum>=0.8.0",
    "einops>=0.8.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pytorch-lightning>=2.5.1.post0",
    "timm>=1.0.15",
    "torch>=2.7.1",
    "torch-metrics>=1.1.7",
    "torchvision>=0.22.1",
    "wandb>=0.20.1",
]
