[project]
name = "unet-comparison-road-scene-segmentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "captum>=0.8.0",
    "einops>=0.8.1",
    "ipykernel>=6.29.5",
    "matplot2tikz>=0.3.3",
    "matplotlib>=3.10.3",
    "matplotlib2tikz>=0.7.6",
    "pandas>=2.3.0",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "pytorch-lightning>=2.5.1.post0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tabulate>=0.9.0",
    "tikzplotlib>=0.10.1",
    "timm>=1.0.15",
    "torch>=2.7.1",
    "torch-metrics>=1.1.7",
    "torchvision>=0.22.1",
    "wandb>=0.20.1",
]
